# franken-shell

./: .gitignore  .gitleaks.toml  .markdownlint-cli2.yaml  .prettierignore  .qmllint.ini  AGENTS.md  CONTRIBUTING.md  package-lock.json  package.json
.github/: pull_request_template.md
ci/: README.md  bootstrap-tools  collect-diagnostics  executable-allowlist.txt  format  hygiene  install-arch-deps  lib.sh  lint  run  smoke  unit
docs/: architecture.md  component-inventory.md  configuration-model.md  decisions.md  design-principles.md  feature-map.md  franken-shell-pr-engineering-roadmap.md  implementation-phases.md  interaction-language.md  open-questions.md  product-vision.md  project-state.md  runtime-dependencies.md  visual-language.md
references/: AGENTS.md
shell/: .qmlls.ini  AGENTS.md  README.md  changes.md  qmldir  (+6 more)
shell/helpers/franken-config-helper/: Cargo.toml
shell/helpers/franken-config-helper/src/: diagnostic.rs  lib.rs  main.rs  migration.rs  parser.rs  protocol.rs  schema.rs
shell/helpers/franken-config-helper/tests/: defaults_contract.rs  fixture_validation.rs  stdio_protocol.rs
shell/helpers/franken-config-helper/tests/fixtures/: command_registry_demo.toml  complete_valid.toml  duplicate_id.toml  invalid_command_string.toml  invalid_enum.toml  malformed.toml  missing_optional.toml  newer_schema.toml  out_of_range.toml  schema_zero.toml  semantic_failure.toml  unknown_field.toml  unsafe_executable.toml  unsupported_command_detached.toml  unsupported_command_environment.toml  unsupported_command_working_directory.toml  wrong_type.toml
(+98 files in other folders)
