[package]
name = "franken-config-helper"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Versioned TOML configuration validator for Franken Shell"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
toml = { version = "1.1.2", default-features = false, features = ["parse", "serde", "std"] }

[lib]
name = "franken_config_helper"
path = "src/lib.rs"

[[bin]]
name = "franken-config-helper"
path = "src/main.rs"
